# GroupViewQML

./: .travis.yml  CMakeLists.txt  README.md  travis-prepare.sh
example/: InstanceModel.cpp  InstanceModel.h  main.cpp  main.qml
src/: GroupView.cpp  GroupView.h  GroupViewDropArea.cpp  GroupViewDropArea_p.h  GroupViewHelper.cpp  GroupViewHelper_p.h  GroupViewProxy.cpp  GroupViewProxy_p.h  resources.qrc
src/qml/: GroupView.qml  ScrollBar.qml
